# service-events

./: .gitignore  Makefile  Pipfile  app.py  pyproject.toml  requirements.txt  setup.py
.chalice/: config.json
.chalice/deployed/: dev.json
chalicelib/events/: put_object.json
chalicelib/judici/application/: app.py  settings.py
chalicelib/judici/dlp/: data_sensitive.py
chalicelib/judici/fileLoaders/: pdf.py
chalicelib/judici/repository/: repository_s3.py
tools/scripts/: pre_deploy.py
